--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <title>Hello</title>
 </head>
 <body>
-   <button id="hide">hide</button>
-   <button id="show">show</button>
-   <button id="toggle">toggle</button>
-   <p class="p1">computer 1</p>
-   <p class="para p2">computer 2</p>
-   <p class="para p3">computer 3</p>
-   <p class="para p4">computer 4</p>
-   <p class="para p5">computer 5</p>
+   <button id="hide">Hide</button>
+   <button id="show">Show</button>
+   <button id="toggle">Toggle</button>
+   <p class="p1">jQuery</p>
+   <p class="para p2">JQUERY</p>
+   <p class="para p3">JQUERY</p>
    <script>
     $(document).ready(function(){
         $("#hide").click(function(){
